Replace CHEESESHOP with PYPI since it is long gone
Reviewed by:	bcr
Differential Revision:	https://reviews.freebsd.org/D53227

--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -1384,7 +1384,7 @@ MASTER_SITE_SUBDIR=	stardict/WyabdcRealPeopleTTS/${PORTVERSION}
 |`BERLIOS`
 |`${PORTNAME:tl}.berlios`
 
-|`CHEESESHOP`
+|`PYPI`
 |`source/${DISTNAME:C/(.).\*/\1/}/${DISTNAME:C/(.*)-[0-9].*/\1/}`
 
 |`CPAN`
