--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -45,7 +45,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA1 builds begin |[.line-through]#3 October 2025# +
 10 October 2025 |11 October 2025 |First beta test snapshot.
 |BETA2 builds begin |[.line-through]#10 October 2025# +
-17 October 2025 |- |Second beta test snapshot.
+17 October 2025 |17 October 2025 |Second beta test snapshot.
 |BETA3 builds begin |[.line-through]#17 October 2025# +
 24 October 2025 |- |Third beta test snapshot.
 |BETA4 builds begin |[.line-through]#24 October 2025# +
