Update website/content/ru/platforms/_index.adoc to the latest revision.
Reviewed by:	maxim (mentor)
Differential Revision:	https://reviews.freebsd.org/D53228

--- a/website/content/ru/platforms/_index.adoc
+++ b/website/content/ru/platforms/_index.adoc
@@ -1,39 +1,56 @@
 ---
-title: "Поддерживаемые платформы"
+title: "Платформы"
 sidenav: developers
 ---
 
 include::shared/ru/urls.adoc[]
 
-= Поддерживаемые платформы
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (20.11.2023): 96d6c43f19c20c0e3322e38ffbef4a134aa9df08
+//
 
-== Введение
+= Платформы
 
-Здесь вы можете найти список платформ, на которые портирована FreeBSD, или ведутся работы по портированию.
+== Поддерживаемые платформы
 
-== Содержание
+Вот список платформ, которые поддерживает FreeBSD.
 
-* link:amd64/[Проект FreeBSD/amd64]
-* link:arm/[Проект FreeBSD/ARM]
-* link:i386/[Проект FreeBSD/i386]
-* link:ia64/[Проект FreeBSD/ia64]
-* link:mips/[Проект FreeBSD/MIPS]
-* link:pc98/[Проект FreeBSD/pc98]
-* link:ppc/[Проект FreeBSD/ppc]
-* link:sparc/[Проект FreeBSD/sparc64]
-* link:xbox/[Проект FreeBSD/xbox]
+[.tblbasic]
+[cols=",,,,",options="header",]
+|===
+|Название платформы |TARGET_ARCH |link:{committers-guide}#archs[Уровень поддержки] в 13.x |link:{committers-guide}#archs[Уровень поддержки] в 14.x |link:{committers-guide}#archs[Уровень поддержки] в 15.x (прогнозный)
+|64-разрядная x86 |link:amd64[amd64] |Уровень 1 |Уровень 1 |Уровень 1
+|32-разрядная x86 |link:i386[i386] |Уровень 2 |Уровень 2 |Не поддерживается
+|64-разрядная ARMv8 |link:arm[aarch64] |Уровень 1 |Уровень 1 |Уровень 1
+|32-разрядная ARMv6 |link:arm[armv6] |Уровень 2 |Уровень 3 |Не поддерживается
+|32-разрядная ARMv7 |link:arm[armv7] |Уровень 2 |Уровень 2 |Уровень 2
+|32-разрядная MIPS без математического модуля |link:mips[mips, mipsel] |Уровень 2 |Не поддерживается |Не поддерживается
+|32-разрядная MIPS с математическим модулем |link:mips[mipshf, mipselhf] |Уровень 2 |Не поддерживается |Не поддерживается
+|32-разрядная MIPS n32 |link:mips[mipsn32] |Уровень 2 |Не поддерживается |Не поддерживается
+|64-разрядная MIPS без математического модуля |link:mips[mips64, mips64el] |Уровень 2 |Не поддерживается |Не поддерживается
+|64-разрядная MIPS с математическим модулем |link:mips[mips64hf, mips64elhf] |Уровень 2 |Не поддерживается |Не поддерживается
+|32-разрядная PowerPC |link:ppc[powerpc] |Уровень 2 |Уровень 2 |Не поддерживается
+|32-разрядная PowerPC с SPE |link:ppc[powerpcspe] |Уровень 2 |Уровень 2 |Не поддерживается
+|64-разрядная PowerPC с прямым порядком байтов |link:ppc[powerpc64] |Уровень 2 |Уровень 2 |Уровень 2
+|64-разрядная PowerPC с обратным порядком байтов |link:ppc[powerpc64le] |Уровень 2 |Уровень 2 |Уровень 2
+|64-разрядная RISC-V |https://wiki.freebsd.org/riscv[riscv64] |Уровень 2 |Уровень 2 |Уровень 2
+|64-разрядная RISC-V без математического модуля |https://wiki.freebsd.org/riscv[riscv64sf] |Уровень 2 |Не поддерживается |Не поддерживается
+|===
 
-== Комментарии и контакты
+== Неподдерживаемые платформы
 
-Если у вас есть замечания, связанные с портом, или вы хотите связаться с разработчиками, пошлите письмо в соответствующий список рассылки. Доступны следующие списки:
+Следующие платформы поддерживались более старыми версиями FreeBSD.
 
-* Для порта FreeBSD/amd64: freebsd-amd64@FreeBSD.org
-* Для порта FreeBSD/ARM: freebsd-arm@FreeBSD.org
-* Для порта FreeBSD/i386: freebsd-current@FreeBSD.org
-* Для порта FreeBSD/ia64: freebsd-ia64@FreeBSD.org
-* Для порта FreeBSD/MIPS: freebsd-mips@FreeBSD.org
-* Для порта FreeBSD/pc98: re-pc98@FreeBSD.org
-* Для порта FreeBSD/ppc: freebsd-ppc@FreeBSD.org
-* Для порта FreeBSD/sparc64: freebsd-sparc@FreeBSD.org
-* Для порта FreeBSD/xbox: freebsd-current@FreeBSD.org
-* Для общих вопросов, связанных с архитектурой, freebsd-arch@FreeBSD.org
+[.tblbasic]
+[cols=",,",options="header",]
+|===
+|Название платформы |TARGET_ARCH |Последний поддерживающий релиз
+|Alpha |alpha |link:../releases/#rel6-4[6.4]
+|32-разрядная ARM v4/v5 с обратным порядком байтов|arm |link:../releases/#rel12-4[12.4]
+|32-разрядная ARM с прямым порядком байтов |armeb |link:../releases/#rel11-4[11.4]
+|Intel IA-64 |ia64 |link:../releases/#rel10-4[10.4]
+|PC98 |pc98 |link:../releases/#rel11-4[11.4]
+|64-разрядная SPARCv9 |sparc64 |link:../releases/#rel12-4[12.4]
+|===
