Status/2025Q3/alpha-omega-beach-cleaning.adoc: apply suggested changes
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/status/report-2025-07-2025-09/alpha-omega-beach-cleaning.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/alpha-omega-beach-cleaning.adoc
@@ -9,7 +9,7 @@ link:https://github.com/FreeBSDFoundation/alpha-omega-beach-cleaning[Project rep
 Contact: Pierre Pronchery <pierre@freebsdfoundation.org>
 
 Alpha-Omega's mission is to catalyze sustainable security improvements to critical open source projects and ecosystems.
-After a successful project with the FreeBSD Foundation in 2024 - auditing the bhyve hypervisor and the Capsicum sandboxing framework - Alpha-Omega has selected FreeBSD again, for the Alpha Omega Beach Cleaning project this time.
+After a successful project with the FreeBSD Foundation in 2024 -- auditing the bhyve hypervisor and the Capsicum sandboxing framework -- Alpha-Omega has selected FreeBSD again, for the Alpha Omega Beach Cleaning project this time.
 This new grant consists in generally improving the security and maintenance of third-party software within the FreeBSD base system.
 The FreeBSD Foundation received the grant and is managing and executing the project.
 
