Document USE_PYTHON=pep517
Reviewed by:	bcr
Differential Revision:	https://reviews.freebsd.org/D53289

--- a/documentation/content/en/books/porters-handbook/special/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/special/_index.adoc
@@ -3578,6 +3578,9 @@ PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 |`USE_PYTHON=optsuffix`
 |If the current Python version is not the default version, the port will gain `PKGNAMESUFFIX=${PYTHON_PKGNAMESUFFIX}`. Only useful with flavors.
 
+|`USE_PYTHON=pep517`
+|Support building and installing wheels according to the PEP-517 standard.
+
 |`PYTHON_PKGNAMEPREFIX`
 |Used as a `PKGNAMEPREFIX` to distinguish packages for different Python versions. Example: `py27-`
 
