--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -3303,9 +3303,32 @@ Developers should be mindful of this, and ensure any compiler specific flags are
 The versions of supported compilers for a given branch such as `main` or `stable/X` varies over time.
 The authoritative source for supported compiler versions are automated CI jobs tested in GitHub's cross-build actions and Jenkins.
 
-For `main`, the in-tree compiler is currently Clang 19.
-Currently, GCC 12, 13, and 14 are tested for amd64 via CI jobs in Jenkins.
-Clang 14 and 18 are tested for aarch64 and arm64 in GitHub's cross-build actions.
+[.tblbasic]
+[cols="10*",options="header",]
+|===
+|Branch | In-tree Compiler
+|llvm12 | llvm13 | llvm14 | llvm15 | llvm18
+|amd64-gcc12 | amd64-gcc13 | amd64-gcc14
+
+|main | llvm 19
+|   |   |   | Y | Y
+| Y | Y | Y
+
+|stable/15 | llvm 19
+|   |   | Y |   | Y
+| Y | Y | Y
+
+|stable/14 | llvm 19
+| Y | Y | Y |   |
+| Y |   | Y
+
+|stable/13 | llvm 19
+| Y | Y | Y |   |
+| Y |   | Y
+|===
+
+GCC toolchains are tested for amd64 via CI jobs in Jenkins.
+LLVM toolchains are tested for aarch64 and arm64 in GitHub's cross-build actions.
 
 === Other Suggestions
 
