--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -47,7 +47,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA2 builds begin |[.line-through]#10 October 2025# +
 17 October 2025 |17 October 2025 |Second beta test snapshot.
 |BETA3 builds begin |[.line-through]#17 October 2025# +
-24 October 2025 |- |Third beta test snapshot.
+24 October 2025 |24 October 2025 |Third beta test snapshot.
 |BETA4 builds begin |[.line-through]#24 October 2025# +
 31 October 2025 |- |Fourth beta test snapshot.
 |RC1 builds begin |[.line-through]#31 October 2025# +
