website/community: Update YouTube information
Reviewed by:	bcr, jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D53262

--- a/website/content/en/community/_index.adoc
+++ b/website/content/en/community/_index.adoc
@@ -32,4 +32,4 @@ The https://wiki.freebsd.org/[FreeBSD wiki] contains information about developme
 
 == Video Content
 
-On YouTube, we host an official link:https://www.youtube.com/FreeBSDProject[FreeBSD] channel with developer summits and "office hours" events, and a link:https://www.youtube.com/bsdconferences[BSD Conferences] channel with full taped presentations from FreeBSD technical conferences.
+On YouTube, we host two official channels. On the main link:https://youtube.com/FreeBSDProject[FreeBSD channel] you'll find technical content, and on the link:https://youtube.com/@FreeBSDMeetings[FreeBSD Meetings] channel you'll find live presentations, conferences, and working group meetings.
