handbook/filesystems: Correct three typos in this chapter
- s/volumne/volume/

--- a/documentation/content/en/books/handbook/filesystems/_index.adoc
+++ b/documentation/content/en/books/handbook/filesystems/_index.adoc
@@ -148,7 +148,7 @@ Use man:sysrc[8] to load the module at startup:
 # sysrc kld_list+=fusefs
 ....
 
-Mount the exFAT volumne by specifying its FreeBSD partition name and an existing mount point.
+Mount the exFAT volume by specifying its FreeBSD partition name and an existing mount point.
 This example mounts [.filename]#/dev/ada0s1# on [.filename]#/mnt#:
 
 [source,shell]
@@ -185,7 +185,7 @@ Use man:sysrc[8] to load the module at startup:
 # sysrc kld_list+=fusefs
 ....
 
-Mount the NTFS volumne by specifying its FreeBSD partition name and an existing mount point.
+Mount the NTFS volume by specifying its FreeBSD partition name and an existing mount point.
 This example mounts [.filename]#/dev/ada0s1# on [.filename]#/mnt#:
 
 [source,shell]
@@ -227,7 +227,7 @@ Use man:sysrc[8] to load the module at startup:
 # sysrc kld_list+=fusefs
 ....
 
-Mount the HFS/HFS+ volumne by specifying its FreeBSD partition name and an existing mount point.
+Mount the HFS/HFS+ volume by specifying its FreeBSD partition name and an existing mount point.
 This example mounts [.filename]#/dev/ada0s1# on [.filename]#/mnt#:
 
 [source,shell]
