handbook/x11: Correct three typos in the chapter x11
- s/enviroment/environment/
- s/catagory/category/

--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -446,7 +446,7 @@ The drivers will automatically offload intensive tasks to the dGPU
 when required, and power it down when able.
 
 To launch applications on the more powerful GPU in PRIME,
-use the `DRI_PRIME=1` enviroment variable.
+use the `DRI_PRIME=1` environment variable.
 
 If multiple graphics drivers are conflicting,
 the driver for the graphics processor can be specified in the
@@ -707,7 +707,7 @@ or manually with package:x11/xinput[xinput]
 and package:x11/setxkbmap[setxkbmap].
 
 Alternatively, there are older, lightweight, individual drivers for
-specific input devices available in the package:x11-drivers[] catagory
+specific input devices available in the package:x11-drivers[] category
 named x11/xf86-input-[foo].
 This approach requires manual configuration of the X.org server.
 Both are described in this subsection.
@@ -809,7 +809,7 @@ These are both vector or outline fonts, there are also bitmap fonts.
 
 The FreeBSD Ports Collection includes a wide and growing catalog
 of free, high quality fonts available for installation
-in the package:x11-fonts[] catagory.
+in the package:x11-fonts[] category.
 
 System-wide font packages installed from the ports collection
 live in `[.filename]#/usr/local/share/fonts/#`.
