website/community: Strech out our hands
PR:		284389
Suggested by:	linimon

--- a/website/content/en/community/_index.adoc
+++ b/website/content/en/community/_index.adoc
@@ -33,3 +33,8 @@ The https://wiki.freebsd.org/[FreeBSD wiki] contains information about developme
 == Video Content
 
 On YouTube, we host two official channels. On the main link:https://youtube.com/FreeBSDProject[FreeBSD channel] you'll find technical content, and on the link:https://youtube.com/@FreeBSDMeetings[FreeBSD Meetings] channel you'll find live presentations, conferences, and working group meetings.
+
+Feel you don't belong here?
+FreeBSD is a system built piece by piece by volunteers from all walks of life.
+If you see something you think you can improve, we want to receive a patch, or a problem report, or a mail from you.
+There is room for everyone to help, and many of us have found enormous challenge and meaning in doing so.
