--- a/website/content/en/platforms/_index.adoc
+++ b/website/content/en/platforms/_index.adoc
@@ -14,23 +14,90 @@ Here is a list of platforms supported by FreeBSD.
 [.tblbasic]
 [cols=",,,,",options="header",]
 |===
-|Platform Name |TARGET_ARCH |13.x link:{committers-guide}#archs[Support Tier] |14.x link:{committers-guide}#archs[Support Tier] |Projected 15.x link:{committers-guide}#archs[Support Tier]
-|64-bit x86 |link:amd64[amd64] |Tier 1 |Tier 1 |Tier 1
-|32-bit x86 |link:i386[i386] |Tier 2 |Tier 2 |Unsupported
-|64-bit ARMv8 |link:arm[aarch64] |Tier 1 |Tier 1 |Tier 1
-|32-bit ARMv6 |link:arm[armv6] |Tier 2 |Tier 3 |Unsupported
-|32-bit ARMv7 |link:arm[armv7] |Tier 2 |Tier 2 |Tier 2
-|32-bit MIPS soft-float |link:mips[mips, mipsel] |Tier 2 |Unsupported |Unsupported
-|32-bit MIPS hard-float |link:mips[mipshf, mipselhf] |Tier 2 |Unsupported |Unsupported
-|32-bit MIPS n32 |link:mips[mipsn32] |Tier 2 |Unsupported |Unsupported
-|64-bit MIPS soft-float |link:mips[mips64, mips64el] |Tier 2 |Unsupported |Unsupported
-|64-bit MIPS hard-float |link:mips[mips64hf, mips64elhf] |Tier 2 |Unsupported |Unsupported
-|32-bit PowerPC |link:ppc[powerpc] |Tier 2 |Tier 2 |Unsupported
-|32-bit PowerPC with SPE |link:ppc[powerpcspe] |Tier 2 |Tier 2 |Unsupported
-|64-bit PowerPC big-endian |link:ppc[powerpc64] |Tier 2 |Tier 2 |Tier 2
-|64-bit PowerPC little-endian |link:ppc[powerpc64le] |Tier 2 |Tier 2 |Tier 2
-|64-bit RISC-V |https://wiki.freebsd.org/riscv[riscv64] |Tier 2 |Tier 2 |Tier 2
-|64-bit RISC-V soft-float |https://wiki.freebsd.org/riscv[riscv64sf] |Tier 2 |Unsupported |Unsupported
+|Platform Name |TARGET_ARCH
+|13.x link:{committers-guide}#archs[Support Tier]
+|14.x link:{committers-guide}#archs[Support Tier]
+|Projected 15.x link:{committers-guide}#archs[Support Tier]
+
+|64-bit x86 |link:amd64[amd64]
+|Tier 1
+|Tier 1
+|Tier 1
+
+|32-bit x86 |link:i386[i386]
+|Tier 2
+|Tier 2
+|Unsupported
+
+|64-bit ARMv8 |link:arm[aarch64]
+|Tier 1
+|Tier 1
+|Tier 1
+
+|32-bit ARMv6 |link:arm[armv6]
+|Tier 2
+|Tier 3
+|Unsupported
+
+|32-bit ARMv7 |link:arm[armv7]
+|Tier 2
+|Tier 2
+|Tier 2
+
+|32-bit MIPS soft-float |link:mips[mips, mipsel]
+|Tier 2
+|Unsupported
+|Unsupported
+
+|32-bit MIPS hard-float |link:mips[mipshf, mipselhf]
+|Tier 2
+|Unsupported
+|Unsupported
+
+|32-bit MIPS n32 |link:mips[mipsn32]
+|Tier 2
+|Unsupported
+|Unsupported
+
+|64-bit MIPS soft-float |link:mips[mips64, mips64el]
+|Tier 2
+|Unsupported
+|Unsupported
+
+|64-bit MIPS hard-float |link:mips[mips64hf, mips64elhf]
+|Tier 2
+|Unsupported
+|Unsupported
+
+|32-bit PowerPC |link:ppc[powerpc]
+|Tier 2
+|Tier 2
+|Unsupported
+
+|32-bit PowerPC with SPE |link:ppc[powerpcspe]
+|Tier 2
+|Tier 2
+|Unsupported
+
+|64-bit PowerPC big-endian |link:ppc[powerpc64]
+|Tier 2
+|Tier 2
+|Tier 2
+
+|64-bit PowerPC little-endian |link:ppc[powerpc64le]
+|Tier 2
+|Tier 2
+|Tier 2
+
+|64-bit RISC-V |https://wiki.freebsd.org/riscv[riscv64]
+|Tier 2
+|Tier 2
+|Tier 2
+
+|64-bit RISC-V soft-float |https://wiki.freebsd.org/riscv[riscv64sf]
+|Tier 2
+|Unsupported
+|Unsupported
 |===
 
 == Unsupported Platforms
