platforms: Add a column for projected 16.x Tiers
This is just a copy of the 15.x Tiers for now.

While here, remove "projected" from the 15.x column.

Differential Revision:	https://reviews.freebsd.org/D53243

--- a/website/content/en/platforms/_index.adoc
+++ b/website/content/en/platforms/_index.adoc
@@ -12,14 +12,16 @@ include::shared/en/urls.adoc[]
 Here is a list of platforms supported by FreeBSD.
 
 [.tblbasic]
-[cols=",,,,",options="header",]
+[cols=",,,,,",options="header",]
 |===
 |Platform Name |TARGET_ARCH
 |13.x link:{committers-guide}#archs[Support Tier]
 |14.x link:{committers-guide}#archs[Support Tier]
-|Projected 15.x link:{committers-guide}#archs[Support Tier]
+|15.x link:{committers-guide}#archs[Support Tier]
+|Projected 16.x link:{committers-guide}#archs[Support Tier]
 
 |64-bit x86 |link:amd64[amd64]
+|Tier 1
 |Tier 1
 |Tier 1
 |Tier 1
@@ -28,8 +30,10 @@ Here is a list of platforms supported by FreeBSD.
 |Tier 2
 |Tier 2
 |Unsupported
+|Unsupported
 
 |64-bit ARMv8 |link:arm[aarch64]
+|Tier 1
 |Tier 1
 |Tier 1
 |Tier 1
@@ -38,8 +42,10 @@ Here is a list of platforms supported by FreeBSD.
 |Tier 2
 |Tier 3
 |Unsupported
+|Unsupported
 
 |32-bit ARMv7 |link:arm[armv7]
+|Tier 2
 |Tier 2
 |Tier 2
 |Tier 2
@@ -48,9 +54,11 @@ Here is a list of platforms supported by FreeBSD.
 |Tier 2
 |Unsupported
 |Unsupported
+|Unsupported
 
 |32-bit MIPS hard-float |link:mips[mipshf, mipselhf]
 |Tier 2
+|Unsupported
 |Unsupported
 |Unsupported
 
@@ -58,9 +66,11 @@ Here is a list of platforms supported by FreeBSD.
 |Tier 2
 |Unsupported
 |Unsupported
+|Unsupported
 
 |64-bit MIPS soft-float |link:mips[mips64, mips64el]
 |Tier 2
+|Unsupported
 |Unsupported
 |Unsupported
 
@@ -68,18 +78,22 @@ Here is a list of platforms supported by FreeBSD.
 |Tier 2
 |Unsupported
 |Unsupported
+|Unsupported
 
 |32-bit PowerPC |link:ppc[powerpc]
 |Tier 2
 |Tier 2
+|Unsupported
 |Unsupported
 
 |32-bit PowerPC with SPE |link:ppc[powerpcspe]
 |Tier 2
 |Tier 2
 |Unsupported
+|Unsupported
 
 |64-bit PowerPC big-endian |link:ppc[powerpc64]
+|Tier 2
 |Tier 2
 |Tier 2
 |Tier 2
@@ -88,14 +102,17 @@ Here is a list of platforms supported by FreeBSD.
 |Tier 2
 |Tier 2
 |Tier 2
+|Tier 2
 
 |64-bit RISC-V |https://wiki.freebsd.org/riscv[riscv64]
+|Tier 2
 |Tier 2
 |Tier 2
 |Tier 2
 
 |64-bit RISC-V soft-float |https://wiki.freebsd.org/riscv[riscv64sf]
 |Tier 2
+|Unsupported
 |Unsupported
 |Unsupported
 |===
