Add initial 16.0-CURRENT FreeBSD version values up through 1600003.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -49,6 +49,40 @@ endif::[]
 
 Here is a convenient list of `__FreeBSD_version` values as defined in https://cgit.freebsd.org/src/tree/sys/sys/param.h[sys/param.h]:
 
+[[versions-16]]
+== FreeBSD 16 Versions
+
+[[freebsd-versions-table-16]]
+.FreeBSD 16 `__FreeBSD_version` Values
+[cols="1,1,1,1", frame="none", options="header"]
+|===
+| Value
+| Revision
+| Date
+| Release
+
+|1600000
+|gitref:8b4e4c2737305df8807abc6cd054a32586085c93[repository="src",length=12]
+|September 4, 2025
+|16.0-CURRENT.
+
+|1600001
+|gitref:52ce810302f70cc7b995651eb1b19adfa014b351[repository="src",length=12]
+|September 29, 2025
+|16.0-CURRENT after LinuxKPI PCI changes.
+
+|1600002
+|gitref:37ad1beaf516854d5e59b90a9706b09d02cc2a81[repository="src",length=12]
+|October 20, 2025
+|16.0-CURRENT after LinuxKPI embedded structure size change.
+
+|1600003
+|gitref:7eb213614b90cde31707a53c4b8ae6acacf2aa0f[repository="src",length=12]
+|October 30, 2025
+|16.0-CURRENT after changing the `bus_alloc_resource` API to accept the `rid` argument by value.
+
+|===
+
 [[versions-15]]
 == FreeBSD 15 Versions
 
