Status/2025Q3/gcc.adoc: spell

--- a/website/content/en/status/report-2025-07-2025-09/gcc.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/gcc.adoc
@@ -20,10 +20,10 @@ The GCC ports were in an inconsistent state: some ports required a bootstrap opt
 Now all GCC ports allow building without any bootstrap option selected, just as it was in the past.
 
 The problem is that building GCC on FreeBSD with FreeBSD's default compiler (clang) is not fully supported.
-Since I know that many users do prefer to build GCC without bootstrapping it, instead of enforcing it as I initially planned, I prefer to maintain the option but remove from a no-boostrap build all features that cannot be built successfully.
-It shall be the users' responsibility to ensure that they do not need any feature incompatible with no-boostrap builds.
+Since I know that many users do prefer to build GCC without bootstrapping it, instead of enforcing it as I initially planned, I prefer to maintain the option but remove from a no-bootstrap build all features that cannot be built successfully.
+It shall be the users' responsibility to ensure that they do not need any feature incompatible with no-bootstrap builds.
 
 At the moment, jit is the only feature that is excluded from a no-bootstrap build.
-The default bootstrap option is STANDARD_BOOSTRAP, so users of packages from official FreeBSD packages repositories will have a full build with all the supported features avaible.
+The default bootstrap option is STANDARD_BOOTSTRAP, so users of packages from official FreeBSD packages repositories will have a full build with all the supported features available.
 
 See commits link:https://cgit.freebsd.org/ports/commit/?id=5ee63cc45413954077b2b0c0546b8342585b41ba[5ee63cc45413954077b2b0c0546b8342585b41ba], link:https://cgit.freebsd.org/ports/commit/?id=62f186cdf6e9689f30e854a0e23482c552c851a2[62f186cdf6e9689f30e854a0e23482c552c851a2] and link:https://lists.freebsd.org/archives/dev-commits-ports-main/2025-August/160223.html[this mail] for more details.
