handbook/sockets: Update a stray bzero() comment
The example was changed to use memset() instead of bzero().
Update the text accordingly.

Reviewed by:	ziaee
Fixes:		920aa82eb1 ("sockets(examples): remove unused register, replace bzero with memset")
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/563

--- a/documentation/content/en/books/developers-handbook/sockets/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/sockets/_index.adoc
@@ -799,7 +799,7 @@ if (INADDR_ANY)
 ....
 
 Its value is `0`.
-Since we have just used `bzero` on the entire structure, it would be redundant to set it to `0` again.
+Since we have just used `memset` to set zeroes on the entire structure, it would be redundant to set it to `0` again.
 But if we port our code to some other system where INADDR_ANY is perhaps not a zero, we need to assign it to `sa.sin_addr.s_addr`.
 Most modern C compilers are clever enough to notice that INADDR_ANY is a constant.
 As long as it is a zero, they will optimize the entire conditional statement out of the code.
