committers-guide: Tweak `Submitted by` text
This trailer is not deprecated by Git, it's deprecated by FreeBSD's
migration to Git.

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2589,7 +2589,7 @@ a mailing list.
 
 |`Submitted by:` +
 (deprecated)
-|This has been deprecated with git; submitted patches should have the author set by using `git commit --author` with a full name and valid email.
+|This has been deprecated with the migration to git; submitted patches should have the author set by using `git commit --author` with a full name and valid email.
 
 |`Reviewed by:`
 a|
