Status/2025Q3/doceng.adoc: Convert to UTF-8
Reported by:	ziaee
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/status/report-2025-07-2025-09/doceng.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/doceng.adoc
@@ -58,7 +58,7 @@ link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:http
  * Indonesian  				(progress: 1%)
  * Italian (it_IT)  			(progress: 4%)
  * Korean  				(progress: 29%)
- * Norwegian Bokmål  			(progress: 1%)
+ * Norwegian BokmÃ¥l  			(progress: 1%)
  * Persian  				(progress: 3%)
  * Polish  				(progress: 1%)
  * Portuguese  				(progress: 0%)
