--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -749,6 +749,13 @@ gitref:edf50670e215[repository=src]
 Added support for Brainboxes USB-to-Serial adapters in man:uftdi[4].
 (gitref:47db906375b5[repository=src])
 
+The man:iwx[4] driver has been added, supporting the Intel Wi-Fi 6 series of M.2 wireless network adapters.
+gitref:2ad0f7e91582[repository=src] (Sponsored by The FreeBSD Foundation)
+
+A new cellular modem driver supports USB network devices implementing the Mobile Broadband Interface Model (MBIM): man:umb[4].
+The accompanying man:umbctl[8] tool is used to display or set MBIM cellular modem interface parameters (4G/LTE).
+gitref:0f1bf1c22a0c[repository=src] (Sponsored by The FreeBSD Foundation)
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
