--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -411,7 +411,7 @@ gitref:fa7b31166ddb[repository=src]
 The man:usbconfig[8] utility now reads the descriptions of usb vendor and products from [.filename]#/usr/share/misc/usb_vendors# when available, similar to what man:pciconf[8] does.
 gitref:7b9a772f9f64[repository=src]
 
-An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env although it does not support long options.
+An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env, although it does not support long options.
 gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
 
 Fix `-U` flag of man:ps[1] to select processes by real user IDs.
@@ -688,7 +688,7 @@ gitref:56f0fc0011c2[repository=src]
 A new wireless driver supporting some Realtek chipsets is available: man:rtw89[4].
 gitref:a2d1e07f6451[repository=src] (Sponsored by The FreeBSD Foundation)
 
-Support for Realtek 8156/8156B has been moved from from man:cdce[4] to man:ure[4] for improved performance and reliability.
+Support for Realtek 8156/8156B has been moved from man:cdce[4] to man:ure[4] for improved performance and reliability.
 gitref:630077a84186[repository=src] (Sponsored by The FreeBSD Foundation)
 
 Support for ACPI GPIO _AEI objects has been added.
@@ -713,7 +713,7 @@ man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14 (gitref:8ef44245
 man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.14 (gitref:b6e8b845aeab[repository=src]).
 (Sponsored by The FreeBSD Foundation).
 
-man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adaptors (gitref:8e62ae9693bd[repository=src]).
+man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adapters (gitref:8e62ae9693bd[repository=src]).
 Required firmware files are already included in to package:comms/iwmbt-firmware[] port.
 
 man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
@@ -1001,7 +1001,7 @@ The ethernet switch controllers, man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], 
 
 man:mount[8] has gained an example for remounting all filesystems read/write in single-user mode.
 
-Manual pages for the lua man:loader[8] modules have had their desctiptions reworded to optimize man:apropos[1] results.
+Manual pages for the lua man:loader[8] modules have had their descriptions reworded to optimize man:apropos[1] results.
 
 The manual pages style guide, man:style.mdoc[5], has gained a section for listing supported hardware.
 When listed this way, the supported hardware will be listed in link:https://www.freebsd.org/releases/{localRel}R/hardware[the supported hardware notes].
