community: Clarify which spaces are official
Discord and Reddit are not officially run, so move them to the
communities paragraph.  Remove Twitter as it's mostly dead now.

--- a/website/content/en/community/_index.adoc
+++ b/website/content/en/community/_index.adoc
@@ -14,7 +14,7 @@ The project maintains several official community spaces where developers, contri
 
 If you prefer asynchronous and long-lived communications channels, FreeBSD offers over one hundred https://lists.freebsd.org[mailing lists] covering a vast range of topics, and provides web-based https://forums.freebsd.org/[forums] and several Usenet link:{handbook}eresources/#eresources-news[newsgroups].
 
-For more real-time collaboration, we have a number of https://wiki.freebsd.org/IRC/[FreeBSD IRC channels] and an instance on https://wiki.freebsd.org/Discord[Discord] where you can find support, learn to contribute, watch live streams and a whole lot more.
+For more real-time collaboration, we have a number of https://wiki.freebsd.org/IRC/[FreeBSD IRC channels] and where you can find support, learn to contribute, and a whole lot more.
 
 If you are interested in professional development and networking opportunities then follow us on https://www.linkedin.com/company/freebsd/[LinkedIn] and join our official https://www.linkedin.com/groups/47628[FreeBSD LinkedIn Group].
 
@@ -24,9 +24,7 @@ Last year there were {{< get-event-last-year-info "events" >}} events around the
 Last year there were {{< get-event-last-year-info "events" >}} events in {{< get-event-last-year-info "countries" >}} different countries around the world.
 ////
 
-On Reddit, you can find the FreeBSD community link:https://www.reddit.com/r/freebsd/[here].
-
-Beyond officially run community spaces, there are many https://www.freebsd.org/usergroups/[User Groups], along with highly active FreeBSD communities on https://twitter.com/search?q=freebsd[Twitter], https://stackoverflow.com/questions/tagged/freebsd[StackOverflow], https://serverfault.com/questions/tagged/freebsd[ServerFault], and https://www.meetup.com/topics/freebsd/[MeetUp.com], among many other technology-related spaces.
+Beyond officially run community spaces, there are many https://www.freebsd.org/usergroups/[User Groups], along with highly active FreeBSD communities on link:https://www.reddit.com/r/freebsd/[Reddit], https://wiki.freebsd.org/Discord[Discord], https://stackoverflow.com/questions/tagged/freebsd[StackOverflow], https://serverfault.com/questions/tagged/freebsd[ServerFault], and https://www.meetup.com/topics/freebsd/[MeetUp.com], among many other technology-related spaces.
 
 The https://wiki.freebsd.org/[FreeBSD wiki] contains information about development and related projects.
 
