--- a/website/content/en/community/_index.adoc
+++ b/website/content/en/community/_index.adoc
@@ -14,7 +14,7 @@ The project maintains several official community spaces where developers, contri
 
 If you prefer asynchronous and long-lived communications channels, FreeBSD offers over one hundred https://lists.freebsd.org[mailing lists] covering a vast range of topics, and provides web-based https://forums.freebsd.org/[forums] and several Usenet link:{handbook}eresources/#eresources-news[newsgroups].
 
-For more real-time collaboration, we have a number of https://wiki.freebsd.org/IRC/[FreeBSD IRC channels] and where you can find support, learn to contribute, and a whole lot more.
+For more real-time collaboration, we have a number of https://wiki.freebsd.org/IRC/[FreeBSD IRC channels] where you can find support, learn to contribute, and a whole lot more.
 
 If you are interested in professional development and networking opportunities then follow us on https://www.linkedin.com/company/freebsd/[LinkedIn] and join our official https://www.linkedin.com/groups/47628[FreeBSD LinkedIn Group].
 
