--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -633,6 +633,11 @@ This is to fix slowdowns with drm-kmod that get worse over time as physical memo
 gitref:831e6fb0baf6[repository=src]
 (Sponsored by The FreeBSD Foundation).
 
+The local stream (AF_UNIX/SOCK_STREAM) and sequenced packet stream (AF_UNIX/SOCK_SEQPACKET) sockets have been improved for better bulk transfer and round trip times.
+The SOCK_SEQPACKET socket has been brought to the specification and now behaves as a true stream socket, while in previous FreeBSD releases it could exhibit features of
+a datagram socket.  Applications that were using SOCK_SEQPACKET incorrectly and relied on old implementation bugs may need to be adjusted.
+gitref:d15792780760[repository=src]
+
 [[drivers]]
 == Devices and Drivers
 
