[phb][Uses]: Document muon argument for Uses=meson
Chasing
https://cgit.freebsd.org/ports/commit/?id=1c9b8179d5f19e7be5b27d289892306c5bff1a53

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1807,10 +1807,12 @@ USE_MATE=	menus:build intlhack
 [[uses-meson]]
 == `meson`
 
-Possible arguments: (none)
+Possible arguments: (none), `muon`
 
 Provide support for Meson based projects.
 For more information see crossref:special[using-meson,Using `meson`].
+
+If `muon` is specified then a build dependency on package:devel/muon[] is added.
 
 [[uses-metaport]]
 == `metaport`
