--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -578,6 +578,8 @@ gitref:953142d6baf3[repository=src] (Sponsored by Amazon)
 
 This section covers changes to kernel configurations, system tuning, and system control parameters that are not otherwise categorized.
 
+The man:aesni[4] driver is now loaded by default on GENERIC kernels, and no longer should be loaded manually in man:loader.conf[5].
+
 [[kernel-general]]
 === General Kernel Changes
 
