GSoC: Add link to 2025 projects wiki page
While here, condense the list of past project pages for brevity.

Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/projects/summerofcode.adoc
+++ b/website/content/en/projects/summerofcode.adoc
@@ -48,28 +48,30 @@ These pages exist to help provide inspiration.
 Another place to look for project ideas about upcoming development projects in FreeBSD is the link:../../status/[FreeBSD Status Reports].
 Contributors are also welcome, and are indeed encouraged, to propose your own ideas, and if the proposal is strong, we'll try to match you with a mentor!
 
-For inspiration, you can have look at the contributor projects from previous years.
+==== Past Projects
 
-* https://wiki.FreeBSD.org/SummerOfCode2024Projects[Summer of Code 2024 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2023Projects[Summer of Code 2023 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2022Projects[Summer of Code 2022 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2021Projects[Summer of Code 2021 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2020Projects[Summer of Code 2020 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2019Projects[Summer of Code 2019 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2018Projects[Summer of Code 2018 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2017Projects[Summer of Code 2017 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2016Projects[Summer of Code 2016 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2015Projects[Summer of Code 2015 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2014Projects[Summer of Code 2014 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2013Projects[Summer of Code 2013 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2012Projects[Summer of Code 2012 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2011Projects[Summer of Code 2011 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2010Projects[Summer of Code 2010 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2009Projects[Summer of Code 2009 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2008[Summer of Code 2008 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2007[Summer of Code 2007 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2006[Summer of Code 2006 FreeBSD Projects Wiki]
-* https://wiki.FreeBSD.org/SummerOfCode2005[Summer of Code 2005 FreeBSD Projects Wiki]
+For inspiration, here are the projects wiki pages from previous years:
+https://wiki.FreeBSD.org/SummerOfCode2025Projects[2025],
+https://wiki.FreeBSD.org/SummerOfCode2024Projects[2024],
+https://wiki.FreeBSD.org/SummerOfCode2023Projects[2023],
+https://wiki.FreeBSD.org/SummerOfCode2022Projects[2022],
+https://wiki.FreeBSD.org/SummerOfCode2021Projects[2021],
+https://wiki.FreeBSD.org/SummerOfCode2020Projects[2020],
+https://wiki.FreeBSD.org/SummerOfCode2019Projects[2019],
+https://wiki.FreeBSD.org/SummerOfCode2018Projects[2018],
+https://wiki.FreeBSD.org/SummerOfCode2017Projects[2017],
+https://wiki.FreeBSD.org/SummerOfCode2016Projects[2016],
+https://wiki.FreeBSD.org/SummerOfCode2015Projects[2015],
+https://wiki.FreeBSD.org/SummerOfCode2014Projects[2014],
+https://wiki.FreeBSD.org/SummerOfCode2013Projects[2013],
+https://wiki.FreeBSD.org/SummerOfCode2012Projects[2012],
+https://wiki.FreeBSD.org/SummerOfCode2011Projects[2011],
+https://wiki.FreeBSD.org/SummerOfCode2010Projects[2010],
+https://wiki.FreeBSD.org/SummerOfCode2009Projects[2009],
+https://wiki.FreeBSD.org/SummerOfCode2008[2008],
+https://wiki.FreeBSD.org/SummerOfCode2007[2007],
+https://wiki.FreeBSD.org/SummerOfCode2006[2006],
+https://wiki.FreeBSD.org/SummerOfCode2005[2005].
 
 [[proposals]]
 == Proposal Guidelines
