--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -50,12 +50,12 @@ General discussions about the pending release and known issues should be sent to
 24 October 2025 |24 October 2025 |Third beta test snapshot.
 |BETA4 builds begin |[.line-through]#24 October 2025# +
 31 October 2025 |31 October 2025 |Fourth beta test snapshot.
+|BETA5 builds being |7 November 2025 |- |Fifth beta test snapshot.
 |RC1 builds begin |[.line-through]#31 October 2025# +
-7 November 2025 |- |First release candidate.
+14 November 2025 |- |First release candidate.
 |RC2 builds begin* |[.line-through]#7 November 2025# +
-14 November 2025 |- |Second release candidate.
-|RC3 builds begin* |[.line-through]#14 November 2025# +
-21 November 2025 |- |Third release candidate.
+21 November 2025 |- |Second release candidate.
+|[.line-through]#RC3 builds begin# |[.line-through]#14 November 2025# |- |[.line-through]#Third release candidate.#
 |[.line-through]#RC4 builds begin# |[.line-through]#21 November 2025# |- |[.line-through]#Fourth release candidate.#
 |RELEASE builds begin |28 November 2025 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |2 December 2025 |- |{localRel}-RELEASE press release.
