--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -50,7 +50,7 @@ General discussions about the pending release and known issues should be sent to
 24 October 2025 |24 October 2025 |Third beta test snapshot.
 |BETA4 builds begin |[.line-through]#24 October 2025# +
 31 October 2025 |31 October 2025 |Fourth beta test snapshot.
-|BETA5 builds being |7 November 2025 |- |Fifth beta test snapshot.
+|BETA5 builds begin |7 November 2025 |7 November 2025 |Fifth beta test snapshot.
 |RC1 builds begin |[.line-through]#31 October 2025# +
 14 November 2025 |- |First release candidate.
 |RC2 builds begin* |[.line-through]#7 November 2025# +
